--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,18 @@
 h1 {
     text-align: center;
+    align-items: center;
     background-color: azure;
     margin-top: 2%;
-    padding-bottom: 5%;
+    padding-bottom: 2%;
     font-family: 'Playfair Display', serif;
+}
+
+#cityInput {
+    max-width: 55%;
+}
+.searchForCity {
+    max-width: 50%;
+}
+.container1 {
+    max-width: 50%;
 }
