--- a/assets/style.css
+++ b/assets/style.css
@@ -1,30 +1,30 @@
 h1 {
-    text-align: center;
-    align-items: center;
-    background-color: #bce1ea;
-    margin-top: 2%;
-    padding-bottom: 2%;
-    font-family: 'Playfair Display', serif;
-    border-bottom: solid black 2px;
+  text-align: center;
+  align-items: center;
+  background-color: #bce1ea;
+  margin-top: 2%;
+  padding-bottom: 2%;
+  font-family: "Playfair Display", serif;
+  border-bottom: solid black 2px;
 }
 
 #cityInput {
-    max-width: 55%;
+  max-width: 55%;
 }
 .searchForCity {
-    max-width: 50%;
+  max-width: 50%;
 }
 .container1 {
-    max-width: 50%;
+  max-width: 50%;
 }
 
 .col-sm {
-    border: solid black 2px;
-    background-color: #bce1ea;
-    color: black;
-    margin:1%;
-    padding:1%;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 200;
-    border-radius: 5px;
+  border: solid black 2px;
+  background-color: #bce1ea;
+  color: black;
+  margin: 1%;
+  padding: 1%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 200;
+  border-radius: 5px;
 }
