--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,8 @@ h1 {
   text-align: center;
   align-items: center;
   background-color: #bce1ea;
-  margin-top: 2%;
+  margin-top: 3%;
+  padding-top: 1%;
   padding-bottom: 2%;
   font-family: "Playfair Display", serif;
   border-bottom: solid black 2px;
@@ -10,12 +11,59 @@ h1 {
 
 #cityInput {
   max-width: 55%;
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
+  border-top: 1px solid black;
+  padding: 8px;
 }
 .searchForCity {
-  max-width: 50%;
+  max-width: 75%;
+  margin-left: 2%;
+  margin-top: 2%;
 }
+
+.citySearchH2Container {
+  display: flex;
+  justify-content: inline;
+}
+
 .container1 {
   max-width: 50%;
+  margin-top: 2%;
+}
+
+.button {
+  list-style: none;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  margin-top: 2%;
+  padding: 8px;
+  cursor: pointer;
+  max-width: 55%;
+}
+
+.button:hover {
+  background-color: #ddd;
+  border: solid .25px black;
+}
+
+.today {
+  margin-top: 2%;
+  position: absolute;
+  left: 42%;
+  top: 11%;
+  font-family: 'Jost', sans-serif;
+  font-size: 2rem;
+  padding: 1%;
+  line-height: 1.5;
+}
+
+.container1 {
+  max-width: 50%;
+}
+
+.weatherForecast {
+  margin-top: 1%;
 }
 
 .col-sm {
@@ -24,7 +72,8 @@ h1 {
   color: black;
   margin: 1%;
   padding: 1%;
-  font-family: "Roboto", sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-weight: 200;
   border-radius: 5px;
+  margin-top: 10%;
 }
