--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@ h1 {
   padding: 8px;
 }
 .searchForCity {
-  max-width: 75%;
+  
   margin-left: 2%;
   margin-top: 2%;
 }
@@ -30,6 +30,7 @@ h1 {
 .container1 {
   max-width: 50%;
   margin-top: 2%;
+  
 }
 
 .button {
@@ -51,25 +52,24 @@ h1 {
   margin-top: 3%;
   position: absolute;
   display: block;
-  left: 42%;
+  left: 56%;
   top: 11%;
   font-family: 'Jost', sans-serif;
   font-size: 1rem;
   padding: 1%;
   line-height: 1.5;
   border: solid black 2px;
-  width: 50%;
+  max-width: 20%;
   margin-bottom: 10%;
   border-radius: 5px;
   font-weight: 100;
-  background-color: hotpink;
- 
 }
 
  
 
 .container1 {
   max-width: 50%;
+  
 }
 
 .weatherForecast {
@@ -86,4 +86,8 @@ h1 {
   font-weight: 200;
   border-radius: 5px;
   margin-top: 10%;
+  position: relative;
+  left: 80%;
+  bottom: 250px;
+  
 }
