--- a/assets/style.css
+++ b/assets/style.css
@@ -22,12 +22,12 @@ h1 {
 }
 
 .citySearchH2Container {
-  display: flex;
-  justify-content: inline;
+  width: 150px;
+  max-width: 20%;
 }
 
 .container1 {
-  max-width: 50%;
+  max-width: 100%;
   margin-top: 2%;
 }
 
@@ -57,12 +57,21 @@ h1 {
   padding: 1%;
   line-height: 1.5;
   border: solid black 2px;
-  max-width: 20%;
+  max-width: 30%;
   margin-bottom: 10%;
   border-radius: 5px;
   font-weight: 100;
 }
-
+.forecast {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  left: 20%;
+  top: 11%;
+  max-width: 80%;
+  min-width: 79%;
+  margin-top: 300px;
+}
 .container1 {
   max-width: 50%;
 }
@@ -71,7 +80,7 @@ h1 {
   margin-top: 9%;
 }
 
-.col-sm {
+.forecastCol {
   border: solid black 2px;
   background-color: #bce1ea;
   color: black;
@@ -79,10 +88,11 @@ h1 {
   padding: 1%;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-weight: 200;
-  border-radius: 5px;
-  margin-top: 10%;
-  position: relative;
-  left: 20%;
-  max-width: 20%;
-  bottom: 250px;
+  border-style: solid;
+  border-width: 1px;
+  padding: 10px;
+  max-width: 18%;
+  margin: 10px;
+  width: 100%;
+  border-radius: 20px;
 }
